<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backcolor"
    android:layoutDirection="ltr"
    android:paddingBottom="20dp">

    <com.production.qtickets.utils.TextviewBold
        android:id="@+id/txt_heder"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:background="@drawable/button_background"
        android:gravity="center_horizontal|center_vertical"
        android:padding="10dp"
        android:text="@string/nav_tc"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/sixteen"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scorlview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_heder">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:orientation="vertical">

            <com.production.qtickets.utils.TextviewRegular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/events_terms_condition"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/forteen" />

            <com.production.qtickets.utils.TextviewBold
                android:id="@+id/txt_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_back_with_corners"
                android:paddingBottom="5dp"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:paddingTop="5dp"
                android:text="@string/ok"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/sixteen" />

        </LinearLayout>


    </ScrollView>


</RelativeLayout>