<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/rg_background"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <ImageView
        android:padding="5dp"
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:src="@drawable/ic_back"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:layout_height="wrap_content">


    </ImageView>


    <RelativeLayout
        android:layout_width="92dp"
        android:layout_height="92dp"
        android:layout_marginTop="12dp"
        android:layout_gravity="center"
        android:id="@+id/ll_lockicon"
        android:background="@drawable/circular_drawable">


        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_whitecheck">


        </ImageView>


    </RelativeLayout>



    <com.production.qtickets.utils.TextviewBold
        android:layout_width="match_parent"
        android:layout_marginTop="24dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="@dimen/twenty"
        android:text="@string/resetpasswords"
        android:textColor="@color/plane_white"
        android:layout_height="wrap_content">


    </com.production.qtickets.utils.TextviewBold>


    <com.production.qtickets.utils.TextviewRegular
        android:layout_width="match_parent"
        android:layout_marginTop="12dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="@dimen/twelve"
        android:text="@string/yourpasswordis"
        android:textColor="@color/plane_white"
        android:layout_height="wrap_content">

    </com.production.qtickets.utils.TextviewRegular>


    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="@dimen/fourty"
        android:background="@drawable/selected_tab_with_corners"
        android:padding="10dp"
        android:textAllCaps="true"
        android:text="@string/txt_continue"
        android:letterSpacing=".1"
        android:textColor="@color/plane_white"
        android:textSize="@dimen/fifteen" />




</LinearLayout>