<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:layoutDirection="ltr">

    <com.production.qtickets.utils.TextviewBold
        android:id="@+id/signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/nav_signup"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <com.production.qtickets.utils.TextviewRegular
        android:id="@+id/login_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signin"
        android:layout_centerHorizontal="true"
        android:text="@string/signuptxt"
        android:textColor="@color/black"
        android:textSize="@dimen/forteen" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/login_to"
        android:layout_marginStart="@dimen/thirty"
        android:layout_marginTop="@dimen/twenty"
        android:layout_marginEnd="@dimen/thirty"
        android:background="@drawable/sign_in_back">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/tl_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/twenty"
                android:layout_marginTop="@dimen/fifty"
                android:layout_marginEnd="@dimen/twenty"
                android:background="@drawable/white_border_back">

                <EditText
                    android:id="@+id/edt_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@null"
                    android:drawableStart="@drawable/ic_signin_email"
                    android:drawablePadding="@dimen/ten"
                    android:hint="@string/name"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/twenty"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="@dimen/forteen" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/tl_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tl_name"
                android:layout_marginStart="@dimen/twenty"
                android:layout_marginTop="@dimen/twenty"
                android:layout_marginEnd="@dimen/twenty"
                android:background="@drawable/white_border_back">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_mail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@null"
                    android:drawableStart="@drawable/ic_sign_email"
                    android:drawablePadding="@dimen/ten"
                    android:gravity="center_vertical"
                    android:hint="@string/youremail"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/twenty"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="@dimen/forteen" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/l_mobile_number"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_below="@+id/tl_email"
                android:layout_marginStart="@dimen/twenty"
                android:layout_marginTop="@dimen/twenty"
                android:layout_marginEnd="@dimen/twenty"
                android:background="@drawable/white_border_back"
                android:orientation="horizontal"
                android:weightSum="2">

                <Spinner
                    android:id="@+id/spin_country_code"
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:backgroundTint="@color/colorWhite"
                    android:popupBackground="@color/backcolor" />


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_phone_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:background="@null"
                    android:drawablePadding="@dimen/ten"
                    android:hint="@string/txt_mobil"
                    android:inputType="phone"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="@dimen/forteen" />


            </LinearLayout>

            <RelativeLayout
                android:id="@+id/tl_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/l_mobile_number"
                android:layout_marginStart="@dimen/twenty"
                android:layout_marginTop="@dimen/twenty"
                android:layout_marginEnd="@dimen/twenty"
                android:background="@drawable/white_border_back">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@null"
                    android:drawableStart="@drawable/ic_password"
                    android:drawablePadding="@dimen/ten"
                    android:gravity="center_vertical"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="@dimen/twenty"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="@dimen/forteen" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/tl_confi_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tl_password"
                android:layout_marginStart="@dimen/twenty"
                android:layout_marginTop="@dimen/twenty"
                android:layout_marginEnd="@dimen/twenty"
                android:background="@drawable/white_border_back">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_rep_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@null"
                    android:drawableStart="@drawable/ic_password"
                    android:drawablePadding="@dimen/ten"
                    android:gravity="center_vertical"
                    android:hint="@string/confpassword"
                    android:inputType="textPassword"
                    android:padding="@dimen/twenty"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="@dimen/forteen" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/r_agree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tl_confi_password"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/twenty"
                android:layout_marginTop="@dimen/twenty"
                android:layout_marginEnd="@dimen/twenty">

                <ImageView
                    android:id="@+id/img_select"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_select" />

                <com.production.qtickets.utils.TextviewRegular
                    android:id="@+id/txt_i_agree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@+id/img_select"
                    android:text="@string/iagree"
                    android:textColor="@color/colorWhite"
                    android:textSize="11dp" />

                <com.production.qtickets.utils.TextviewBold
                    android:id="@+id/txt_terms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@+id/txt_i_agree"
                    android:text="@string/terms"
                    android:textColor="@color/colorWhite"
                    android:textSize="11dp" />

                <com.production.qtickets.utils.TextviewRegular
                    android:id="@+id/txt_and"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/txt_terms"
                    android:text=" &amp; "
                    android:textColor="@color/colorWhite"
                    android:textSize="11dp" />

                <com.production.qtickets.utils.TextviewBold
                    android:id="@+id/txt_privacy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/txt_and"
                    android:text="@string/privacy"
                    android:textColor="@color/colorWhite"
                    android:textSize="11dp" />

            </RelativeLayout>

            <com.production.qtickets.utils.TextviewBold
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/r_agree"
                android:layout_marginStart="@dimen/twenty"
                android:layout_marginTop="@dimen/twenty"
                android:layout_marginEnd="@dimen/twenty"
                android:background="@drawable/yellow_with_corner_back"
                android:gravity="center_horizontal"
                android:padding="@dimen/fifteen"
                android:text="@string/nav_signup"
                android:textAllCaps="true"
                android:textColor="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_login"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <com.production.qtickets.utils.TextviewRegular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alredy"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/sixteen" />

                <com.production.qtickets.utils.TextviewBold
                    android:id="@+id/goto_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/five"
                    android:text="@string/signin"
                    android:textAllCaps="true"
                    android:textColor="@color/buttoncolor"
                    android:textSize="@dimen/sixteen" />

            </LinearLayout>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>